css/main.css
/* ==========================================================================
   Import Fonts
   ========================================================================== */

@font-face {
    font-family: 'Din1451 Mittelschrift';
    src: url('../fonts/din1451alt-webfont.eot');
    src: url('../fonts/din1451alt-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/din1451alt-webfont.woff') format('woff'),
         url('../fonts/din1451alt-webfont.ttf') format('truetype'),
         url('../fonts/din1451alt-webfont.svg#alte_din_1451_mittelschriftRg') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* ==========================================================================
   Base-CSS
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

html {
    overflow: auto;
    min-height: 100%
}

body {
    overflow: auto;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #d20b00;
    text-shadow: none;
    color: #fff;
}

::selection {
    background: #d20b00;
    text-shadow: none;
    color: #fff;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

img {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Interface styles
   ========================================================================== */

::-webkit-input-placeholder { color:#999; }
::-moz-placeholder { color:#999; } /* firefox 19+ */
input:-moz-placeholder { color:#999; }

h1, h2, h3,
.button_round, .button, 
label {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

label {
    vertical-align: middle;
    display: inline;
}

body {
    display: flex;
    box-sizing: border-box;
    padding: 1em 0;
    background: url(../img/gravita.jpg) 0 0 no-repeat;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center top;
    font-family: 'Din1451 Mittelschrift', Arial, sans-serif;
    font-weight: 400;
    font-size: 18px;
    -webkit-font-smoothing: antialiased;
    color: #333;
}

.container {
    box-sizing: border-box;
    position: relative;
    margin: auto;
    width: 100%;
    max-width: 460px;
    min-height: 330px;
    padding: 2.5em 2em 2em;
    background: url(../img/beta_flag.png) 95% 0 no-repeat;
    background-size: 10%;
    background-color: rgba(255,255,255,0.85);
    border-radius: 10px;
    box-shadow: 0 7px 24px rgba(0,0,0,0.75),
                inset 0 1px 0 rgba(255,255,255,0.5),
                inset 0 -1px 1px rgba(0,0,0,0.25);
}

ul, li {
    list-style-type: none;
}

h1 {
    font-size: 2em;
    line-height: 1em;
    margin: 0 0 25px 0;
    padding: 0;
    font-weight: 400;
}

#back_button {
    -webkit-appearance: none;
    appearance: none;
    border: 0;
    background: transparent;
    font-family: inherit;
    padding: 0;

    display: inline-block;
    position: absolute;
    top: 1rem;
    left: 2rem;
    font-size: .75em;
    cursor: pointer;
    transition: transform .1s ease-in;
    transform-origin: 50%;
}

#back_button:hover,
#back_button:focus {
    transform: scale(1.05);
}

.fieldrow {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

.fieldcontainer {
    width: calc(50% - .5em);
}

.fieldcontainer label {
    display: block;
    text-overflow: ellipsis;
    overflow: hidden;
}

input, 
.regular-radio + label {
    background: rgba(255, 255, 255, 0.5);
    box-shadow: inset 0 1px 3px rgba(0,0,0,0.35), 0 1px 0 #fff;
    border: 1px solid #cacece;
    font-family: inherit;
    color: inherit;
    transition: .1s ease-in;
    transition-property: border-color, box-shadow;
}

input:focus, 
.regular-radio:focus + label {
    border-color: currentColor;
}

input[type=text] {
    display: block;
    width: 100%;
    height: 1.5em;
    border-radius: 3px;
    outline: none;
    text-align: center;
    -webkit-font-smoothing: antialiased;
    font-size: 2em;
}

.button {
    width: 100%;
    min-height: 2em;
    margin-top: 20px;
    border: 1px solid #af0000;
    border-radius: 3px;
    font-family: inherit;
    -webkit-font-smoothing: antialiased;
    font-size: 1.5em;
    text-shadow: 0 1px 2px rgba(0,0,0,0.65);
    color: #f9f9f9;
    background: #db0000;
    outline: none;
    /*background: -moz-linear-gradient(top,  #ff635a 0%, #d20b00 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff635a), color-stop(100%,#d20b00));
    background: -webkit-linear-gradient(top,  #ff635a 0%,#d20b00 100%);
    background: -o-linear-gradient(top,  #ff635a 0%,#d20b00 100%);
    background: -ms-linear-gradient(top,  #ff635a 0%,#d20b00 100%);
    background: linear-gradient(to bottom,  #ff635a 0%,#d20b00 100%);
    */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff635a', endColorstr='#d20b00',GradientType=0 );
    -webkit-transition: box-shadow 0.1s;
    -moz-transition: box-shadow 0.1s;
}

.button:hover,
.button:focus {
    box-shadow: 0 1px 5px rgba(0,0,0,0.5);
    background: #e30000;
}

.button:active {
    box-shadow: inset 0 2px 10px rgba(0,0,0,0.5);
    background: #c31006;
    /*background: -moz-linear-gradient(top,  #c31006 0%, #d20b00 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c31006), color-stop(100%,#d20b00));
    background: -webkit-linear-gradient(top,  #c31006 0%,#d20b00 100%);
    background: -o-linear-gradient(top,  #c31006 0%,#d20b00 100%);
    background: -ms-linear-gradient(top,  #c31006 0%,#d20b00 100%);
    background: linear-gradient(to bottom,  #c31006 0%,#d20b00 100%);
    */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c31006', endColorstr='#d20b00',GradientType=0 );
}

.button:focus {
    border-color: #333333;
}
 
/* RADIO */

ul.checklist {
    padding: 1em 0 0 0;
    clear: both;
}

.checklist li {
    display: flex;
    align-items: flex-start;
    padding: 5px;
}
 
.regular-radio {
    -webkit-appearance: none;
    appearance: none;
    position: absolute;
    opacity: 0;
    width: 1.5em;
    height: 1.5em;
}
 
.regular-radio + label {
    flex-grow: 0;
    flex-shrink: 0;
    cursor: pointer;
    -webkit-appearance: none;
    border-radius: 50%;
    display: inline-flex;
    width: 1.5em;
    height: 1.5em;
    align-items: center;
    justify-content: center;
}
 
.regular-radio + label:after {
    content: '';
    width: 50%;
    height: 50%;
    border-radius: 50%;
    background: #333;
    transform-origin: 50%;
    transform: scale(0);
    transition: transform .1s ease-in;
}

.regular-radio:checked + label:after {
    transform: scale(1);
}
 
.regular-radio + label:active {
    box-shadow: inset 0 1px 3px rgba(0,0,0,0.5), 0 1px 0 #fff;
}

.radio_label {
    cursor: pointer;
    margin-top: .125em;
    margin-left: .5em;
    transition: transform .1s ease-in;
    transform-origin: 0 50%;
}

.regular-radio:hover ~ .radio_label,
.regular-radio:focus ~ .radio_label,
.radio_label:hover {
    transform: scale(1.05);
}


/* Page 2 */

#page2 {
    display: none;
}

#edv_number {
    margin: 0 auto;
    padding-top: 15px;
    text-align: center;
    font-size: 5em;
}

#uic_number {
    margin: 30px auto 0 auto;
    text-align: center;
    font-size: 2em;
}

